Fix T46568: UV select-linked failure to de-select

Shift-L was de-selecting all instead of the linked UV's.